murmur3 (1.0.5.0~bionic) bionic; urgency=high

  * Changed the project name from libmurmur3 to just murmur3.
  * Added the murmur3sum tool (similar to md5sum with murmur3).
  * Added a manual page for the murmur3sum tool.
  * Added support for a streaming version in C++.
  * Converted the test to snapcatch2 so we can get coverage data.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 29 Oct 2022 14:01:03 -0700

murmur3 (1.0.4.6~bionic) bionic; urgency=high

  * Changed compat to v10.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 19 May 2022 20:32:43 -0700

murmur3 (1.0.4.5~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 19 May 2022 10:34:40 -0700

murmur3 (1.0.4.4~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 29 Aug 2021 12:14:49 -0700

murmur3 (1.0.4.3~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 24 Aug 2021 14:05:06 -0700

murmur3 (1.0.4.2~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Jun 2021 17:47:35 -0700

murmur3 (1.0.4.1~bionic) bionic; urgency=low

  * Bumped version to recompile.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 15 May 2021 10:01:50 -0700

murmur3 (1.0.4.0~bionic) bionic; urgency=low

  * Changed the version to bionic.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 13 Nov 2020 20:46:54 -0800

murmur3 (1.0.3.1~xenial) xenial; urgency=low

  * Bump version to get another build request.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 26 May 2020 11:20:49 -0800

murmur3 (1.0.3.0~xenial) xenial; urgency=low

  * Make the fallthrough attribute optional (requires gcc 7+).

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 25 May 2020 20:54:58 -0800

murmur3 (1.0.2.0~xenial) xenial; urgency=low

  * Added the fallthrough attribute so it compiles under Ubuntu 18.04.