@@ -18,7 +18,10 @@ void MurmurHash3_x86_32 (const void *key, int len, uint32_t seed, void *out);
 
 void MurmurHash3_x86_128(const void *key, int len, uint32_t seed, void *out);
 
-void MurmurHash3_x64_128(const void *key, int len, uint32_t seed, void *out);
+void MurmurHash3_x64_128(const void *key, int len, uint64_t seed, void *out);
+
+void MurmurHash3_x64_128_128(const void *key, int len,
+                             uint64_t seed1, uint64_t seed2, void *out);
 
 //-----------------------------------------------------------------------------
 
